User is able to select a coordinate to play if the player time falls within the given coordinate - this still has an issue that reverts to the latest jump when time progresses, so that needs to be fixed.

--- a/client/src/components/coord-player/timeline/coordinate/coordinate.css
+++ b/client/src/components/coord-player/timeline/coordinate/coordinate.css
@@ -10,13 +10,18 @@
   margin-bottom: 5px;
 }
 
-.coordinate.nowPlaying {
-  background-color: palegreen;
-}
-
 .coordinate.canPlay {
   outline: 1px solid rgba(255, 255, 255, .8);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05) inset, 0px 0px 8px rgba(255, 255, 255, 0.6);
+}
+
+.coordinate.nowPlaying {
+  outline: 1px solid rgba(152, 251, 152, 1);
+}
+
+.coordinate.canClick:hover {
+  outline: 1px solid rgba(86, 180, 239, 1);
+  cursor: pointer;
 }
 
 .jump {
